syntax = "proto3";

package AddCard;

message AddCardInput {
    string userId = 1;
    string currency = 2;
    string redirectLink = 3;
}

message AddCardResponse {
    string addCardLink = 1;
    repeated string error = 2;
}